--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a{
 
 .tp{
     position: relative;
-    bottom: 230px;
+    bottom: 260px;
     font-family: 'Dancing Script', cursive;
     font-size: 1.6em; 
     color: #F2F2F2; 
@@ -67,14 +67,14 @@ a{
 
 .tp2{
     position: relative;
-    bottom: 240px;
+    bottom: 270px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 0.9em; 
     color: #F2F2F2; 
-    padding: 10px;  
+    padding: 30px;  
 }
 
-#carrosel{
+#produtos{
     width: 100vw;
 }
 
@@ -84,7 +84,7 @@ a{
 }
 
 .faixaDiv2{
-    height: 50px;
+    height: 100px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
@@ -94,7 +94,7 @@ a{
 
 .c3{
     position: relative;
-    top: 10px;
+    top: 50px;
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(173, 20, 20);
     font-weight: bold;
@@ -102,6 +102,42 @@ a{
 }
 
 img{
-    max-width: 100vw;
+    width: 100%;
 }
 
+.imgp{
+    text-align: center;
+}
+
+.pd{
+    color: black;
+    font-size: 1.2em;
+}
+
+figcaption{
+    background-color: rgba(189, 164, 26, 0.6);
+    margin: 3px auto;
+    width: 90%;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    border-radius: 0 0 15px 15px;
+    padding: 8px 0 0 0;
+}
+
+.click{
+    width: 80%;
+    text-align: center;
+    border-radius: 35px 15px 35px;
+    margin: auto;
+    position: relative;
+    top: 20px;
+}
+
+
+.fixarRodape {
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    height: 20px;
+    position: relative;
+    top: 80px;
+}
