--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ li{
     grid-template-columns: 33.33% 33.33% 33.33%;
     margin: 15px;
     /* grid-template-rows: 400px; 
-    grid-auto-rows: 500px; */ */
+    grid-auto-rows: 500px; */ 
 }
   
 .item {
@@ -69,7 +69,7 @@ figcaption{
     background-color: rgba(0, 128, 0,0.2); 
     margin: 0 auto;
     width: 100%;
-    float: right;
+    /* float: right; */
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0 0 5px 5px;
     padding: 8px 0 0 0;
@@ -236,7 +236,7 @@ figcaption:hover{
         background-color: palegoldenrod;
         text-align:left;
         display: inline-block;
-        float: right;
+        /* float: right; */
         margin-right: 10px;
     }
 
