--- a/css/style3.css
+++ b/css/style3.css
@@ -7,7 +7,7 @@
 #produtosg{
     width: 100vw;
     text-align: center;
-    background-color: rgba(109, 42, 42, 0.1);
+    background-color: rgb(124, 31, 16, 0.3);
 }
 
 .tema{
@@ -17,7 +17,7 @@
     text-align: center;
     padding-top: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(27, 77, 27);
+    color: rgb(124, 31, 16);
 }
 
 .tema1{
@@ -88,7 +88,9 @@ footer{
 
     #produtosg{
         width: 100vw;
-        padding: 0 25px 0 0;
+        padding: 0 55px 0 0;
+        background-color: rgb(124, 31, 16, 0.1);
+
 
     }
 
@@ -100,8 +102,9 @@ footer{
         text-align: center;
         padding-top: 30px;
         font-family: Arial, Helvetica, sans-serif;
-        color: rgb(27, 77, 27);
-    }
+        color: rgb(124, 31, 16);  
+        margin-bottom: 60px;
+      }
     
     .tema1{
         font-size: 2em;
