--- a/css/style6.css
+++ b/css/style6.css
@@ -17,7 +17,7 @@
     text-align: center;
     padding-top: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(27, 77, 27);
+    color: rgb(114, 100, 8);
 }
 
 .tema1{
@@ -33,10 +33,10 @@ p{
 .container {
     width: 95%;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 50% 50%;
     margin: 15px;
-    /* grid-template-rows: 400px; 
-    grid-auto-rows: 500px; */ 
+    /* grid-template-rows: 600px;
+    grid-auto-rows: 500px; */  
 }
   
 .item {
@@ -62,7 +62,7 @@ figcaption:hover{
 }
 
 .imgp{
-    height: 300px;
+    height: 800px;
     width: 100%;
     border-radius: 15px 15px 0 0;
     border: 1px solid black;
@@ -93,14 +93,14 @@ footer{
     }
 
     .tema{
-        height: 150px;
+        height: 170px;
         padding: 30px;
         width: 100%;
         margin: auto;
         text-align: center;
         padding-top: 30px;
         font-family: Arial, Helvetica, sans-serif;
-        color: rgb(27, 77, 27);
+        color: rgb(114, 100, 8);
     }
     
     .tema1{
@@ -138,7 +138,7 @@ footer{
     }
     
     .imgp{
-        height: 300px;
+        height: 500px;
         width: 90%;
         border-radius: 15px 15px 0 0;
         border: 1px solid black;
